Prevent double vertical scrollbar on lists

--- a/src/CashFlow.Host/ClientApp/src/app/code-list/code-list.component.scss
+++ b/src/CashFlow.Host/ClientApp/src/app/code-list/code-list.component.scss
@@ -1,5 +1,5 @@
 .gridContainer {
-  max-height: calc(100vh - 11.5rem);
+  max-height: calc(100vh - 12rem);
   overflow: auto;
 }
 
