--- a/src/CashFlow.Host/ClientApp/src/app/transaction-list/transaction-list.component.scss
+++ b/src/CashFlow.Host/ClientApp/src/app/transaction-list/transaction-list.component.scss
@@ -6,7 +6,7 @@
 }
 
 .gridContainer {
-  max-height: calc(100vh - 14.5rem);
+  max-height: calc(100vh - 15rem);
   overflow: auto;
 }
 
